--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Love running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+  <header>Header Content</header>
+  <section>
+    Main Image
+</section>
+  <section>
+    Club Ethos
+</section>
+  <Section>
+    Running Locations, dictances and times
+</Section>
+  <footer>
+    Social links here
+  </footer>
 </body>
 </html>
