--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +11,38 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love running</title>
 </head>
+
 <body>
-  <header>Header Content</header>
-  <section>
-    Main Image
-</section>
-  <section>
-    Club Ethos
-</section>
-  <Section>
-    Running Locations, dictances and times
-</Section>
-  <footer>
-    Social links here
-  </footer>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+    </header>
+    <na>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="#">Gallery</a>
+            </li>
+            <li>
+                <a href="#">Sign Up</a>
+            </li>
+        </ul>
+    </na>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <Section>
+        Running Locations, dictances and times
+    </Section>
+    <footer>
+        Social links here
+    </footer>
 </body>
+
 </html>
