--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             </li>
         </ul>
     </na>
-    <section>
-        Main Image
+    <section id="hero-outer">
+       <div id="hero-image">
+        <img src=""
+       </div>>
     </section>
     <section>
         Club Ethos
