--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
     </section>
-    <Section>
+    <Section id="times">
         <div>
             <h2>Urban</h2>
             <h3>Monday</h3>
