--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </Section>
     <footer>
-       <ul>
+       <ul class="social-networks">
         <li>
             <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
         </li>
