--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,6 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
-    </header>
     <nav>
         <ul id ="menu">
             <li>
@@ -31,6 +30,20 @@
             </li>
         </ul>
     </nav>
+    </header>
+
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
+        <img src="assets/images/girls.jpg" alt="Three girls at charity painting festival">
+        <img src="assets/images/runner3.jpg" alt="Solo male running jogging on a beach">
+        <img src="assets/images/man.jpg" alt="Man at a charity paint running festival">
+        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through Pheonix Park">
+        <img src="assets/images/runner2.jpg" alt="Runners competing in marathon">
+        <img src="assets/images/runner4.jpg" alt="Solo female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="Two women runners taking a muddy selfie after the mud runners championship">
+    </section>
+    
     <footer>
        <ul class="social-networks">
         <li>
